--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -3,4 +3,5 @@
 
     <string name="key_action_open_preference">key_action_open_preference</string>
     <string name="key_action_open_category">key_action_open_category</string>
+    <string name="key_action_remove_category">key_action_remove_category</string>
 </resources>
