:arrow_up: Updating project with AndroidX
AndroidX dependencies added instead of SupportLibrary
Koin updated to match the AndroidX update
Kotlin and Gradle dependencies updated

--- a/app/src/main/res/layout/fragment_category_list.xml
+++ b/app/src/main/res/layout/fragment_category_list.xml
@@ -3,11 +3,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_categorylist_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -21,7 +21,7 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/item_task"/>
 
-        <android.support.design.widget.FloatingActionButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_categorylist_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,6 +29,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
