--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <!-- General -->
+    <color name="gray">#808080</color>
+
     <!-- Category -->
     <color name="blue">#62A7E0</color>
     <color name="green">#4CB27C</color>
