--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="task"
-            type="com.escodro.alkaa.data.local.model.Task"/>
+            type="com.escodro.alkaa.data.local.model.Task" />
 
         <variable
             name="color"
-            type="String"/>
+            type="String" />
 
         <variable
             name="isAlarmVisible"
-            type="Boolean"/>
+            type="Boolean" />
 
     </data>
 
@@ -43,7 +43,7 @@
                 android:layout_width="6dp"
                 android:layout_height="match_parent"
                 android:background="@{color}"
-                tools:background="#c21111"/>
+                tools:background="#C21111" />
 
         </androidx.cardview.widget.CardView>
 
@@ -51,45 +51,52 @@
             android:id="@+id/checkbox_itemtask_completed"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
             android:checked="@{task.completed}"
             android:elevation="4dp"
             android:gravity="center"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@id/cardview_itemtask_background"
             app:layout_constraintStart_toStartOf="@id/cardview_itemtask_background"
-            app:layout_constraintTop_toTopOf="@id/cardview_itemtask_background"/>
+            app:layout_constraintTop_toTopOf="@id/cardview_itemtask_background" />
 
         <TextView
-            android:id="@+id/edittext_itemtask_description"
+            android:id="@+id/textview_itemtask_description"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="8dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:elevation="4dp"
             android:gravity="center_vertical"
             android:singleLine="true"
             android:text="@{task.description}"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@id/cardview_itemtask_background"
-            app:layout_constraintEnd_toStartOf="@id/imageview_itemtask_alarm"
-            app:layout_constraintStart_toEndOf="@id/checkbox_itemtask_completed"
-            app:layout_constraintTop_toTopOf="@id/cardview_itemtask_background"
-            tools:text="Item 1"/>
-
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imageview_itemtask_alarm"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginEnd="16dp"
-            android:elevation="4dp"
-            android:src="@drawable/ic_clock"
-            android:visibility="@{isAlarmVisible}"
-            app:layout_constraintBottom_toBottomOf="@id/cardview_itemtask_background"
+            app:layout_constraintBottom_toTopOf="@+id/textview_itemtask_alarm"
             app:layout_constraintEnd_toEndOf="@id/cardview_itemtask_background"
-            app:layout_constraintTop_toTopOf="@id/cardview_itemtask_background"/>
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@id/checkbox_itemtask_completed"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="Item 1" />
+
+        <TextView
+            android:id="@+id/textview_itemtask_alarm"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:elevation="4dp"
+            android:singleLine="true"
+            android:textSize="14sp"
+            android:visibility="@{isAlarmVisible}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/cardview_itemtask_background"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@id/checkbox_itemtask_completed"
+            app:layout_constraintTop_toBottomOf="@+id/textview_itemtask_description"
+            app:relative_time="@{task.dueDate}"
+            tools:text="11/26/18 12:00 PM" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
