:recycle: Update Task detail responsibilities
Fragment responsibility regarding the task decreased
ViewModel responsibility regarding the task increased
Extension created to notify the MutableLiveData to reload
Two-way data binding removed

These changes are related to the issue that every time the detail screen
was opened, a new update was done to the database.

--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -26,7 +26,7 @@
             android:imeOptions="actionDone"
             android:inputType="text"
             android:maxLines="1"
-            android:text="@={viewModel.taskData.title}"
+            android:text="@{viewModel.taskData.title}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -45,7 +45,7 @@
             android:layout_height="0dp"
             android:layout_margin="8dp"
             android:gravity="top"
-            android:text="@={viewModel.taskData.description}"
+            android:text="@{viewModel.taskData.description}"
             app:layout_constraintBottom_toTopOf="@+id/textview_taskdetail_date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
