--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -66,13 +66,28 @@
             android:id="@+id/edittext_taskdetail_description"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_margin="8dp"
+            android:layout_margin="16dp"
+            android:background="@android:color/transparent"
             android:gravity="top"
+            android:hint="@string/task_details_description_hint"
+            android:inputType="textCapSentences|textMultiLine"
             android:text="@{viewModel.taskData.description}"
             app:layout_constraintBottom_toTopOf="@+id/textview_taskdetail_date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view_category_separator_bottom" />
+
+        <View
+            android:id="@+id/view_description_separator_bottom"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/gray_light"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edittext_taskdetail_description" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/textview_taskdetail_date"
