--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -72,7 +72,7 @@
             android:hint="@string/task_details_description_hint"
             android:inputType="textCapSentences|textMultiLine"
             android:text="@{viewModel.taskData.description}"
-            app:layout_constraintBottom_toTopOf="@+id/textview_taskdetail_date"
+            app:layout_constraintBottom_toTopOf="@+id/view_description_separator_bottom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view_category_separator_bottom" />
@@ -84,39 +84,30 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
             android:background="@color/gray_light"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edittext_taskdetail_description" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/textview_taskdetail_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="24dp"
-            android:gravity="center"
-            android:text="@{viewModel.taskData.dueDate}"
-            app:layout_constraintBottom_toTopOf="@id/btn_taskdetail_date"
+            app:layout_constraintBottom_toTopOf="@+id/btn_taskdetail_date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_taskdetail_date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="56dp"
-            android:background="@color/blue"
-            android:text="@string/app_name"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="16dp"
+            android:background="@null"
+            android:src="@drawable/ic_alarm"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_taskdetail_remove_alarm"
-            android:layout_width="32dp"
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_taskdetail_date"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:background="@color/blue"
+            android:layout_marginStart="16dp"
+            android:text="@{viewModel.taskData.dueDate}"
+            android:visibility="@{viewModel.chipVisibility}"
+            app:closeIconVisible="true"
             app:layout_constraintBottom_toBottomOf="@id/btn_taskdetail_date"
             app:layout_constraintStart_toEndOf="@id/btn_taskdetail_date"
             app:layout_constraintTop_toTopOf="@id/btn_taskdetail_date" />
